--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quote by personalities...</title>
   </head>
-  <body></body>
+  <body>
+    <div id="quotes">Quote</div>
+    <div id="authors">Author</div>
+    <button>New Quote</button>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
