added new quotes and tweet me button.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div id="quotes">Quote</div>
     <div id="authors">Author</div>
-    <button>New Quote</button>
+    <button id="newQuote">New Quote</button>
+    <button id="tweetMe"></button>
     <script src="./js/main.js"></script>
   </body>
 </html>
