--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+    />
     <title>Quote by personalities...</title>
   </head>
   <body>
-    <div id="quotes">Quote</div>
-    <div id="authors">Author</div>
-    <button id="newQuote">New Quote</button>
+    <div class="container">
+      <i class="fas fa-quote-left"></i>
+      <div class="content">
+        <div id="quotes">Quote</div>
+        <div id="authors">Author</div>
+      </div>
+      <i class="fas fa-quote-right"></i>
+      <div class="buttons">
+        <button id="newQuote">New Quote</button>
+      </div>
+    </div>
     <button id="tweetMe"></button>
     <script src="./js/main.js"></script>
   </body>
