styled container and text with queries
added 1 media query on quotes and author.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./scss/css/style.css" />
+    <link rel="stylesheet" href="./scss/css/mediaQueries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,12 +20,14 @@
   </head>
   <body>
     <div class="container">
-      <i class="fas fa-quote-left"></i>
+      <div class="icon">
+        <i class="fas fa-quote-left fa-5x"></i>
+      </div>
       <div class="content">
         <div id="quotes">Quote</div>
         <div id="authors">Author</div>
       </div>
-      <i class="fas fa-quote-right"></i>
+      <i class="fas fa-quote-right fa-5x"></i>
       <div class="buttons">
         <button id="newQuote">New Quote</button>
       </div>
