implemented copy to clipboard button
todo: make small notifying effect over button when pressing copy button.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       </div>
     </div>
     <button id="tweetMe"></button>
+    <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+    <button onclick="copyClip()" class="copyTo">Copy</button>
     <script src="./js/main.js"></script>
   </body>
 </html>
