copied to clipboard
copy button now shows copied to clipboard alert.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       </div>
     </div>
     <button id="tweetMe"></button>
-    <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
+    <div class="toolbox" id="tooltipbox">
+      <span class="tooltiptext" id="myTooltip">Copied to clipboard</span>
+    </div>
     <button onclick="copyClip()" class="copyTo">Copy</button>
     <script src="./js/main.js"></script>
   </body>
